--- a/chattty.com/index.html
+++ b/chattty.com/index.html
@@ -27,9 +27,9 @@
     
     <meta name="apple-mobile-web-app-status-bar-style" content="#FFFFFF">
 
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/app3860.css?v=1">
+    <link rel="stylesheet" href="https://chattty.com/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://chattty.com/cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://chattty.com/css/app3860.css?v=1">
 
     <style>.chat_pane__user_item__status__hash {
     position: absolute;
@@ -1171,10 +1171,9 @@ button#login-form__submit {
     var settings = {"chat_name":"\u0634\u0627\u062a \u0628\u0646\u0648\u062a\u0629 \u0639\u0634\u0642\u064a","chat_background":null,"background_color":"#51515a","btn_color":"#050505","window_color":"#FFFFFF","content_color":"","border_color":"#050505","show_chat_background":0,"required_likes_to_change_avatar":50,"show_banner":1,"banner_img":"_ak3iq_ztk9bha9q.jpeg","show_chat_background_on_windows":0,"marquee_bg_color":"#050505","marquee_text_color":"#FFFFFF","marquee_content":"\u200f\u0644\u0645 \u064a\u0639\u064f\u062f \u0628\u064a\u0646\u0646\u0627 \u0648\u0628\u064a\u0646 \u0631\u0645\u0636\u0627\u0646 \u0625\u0644\u0627 \u0623\u064a\u0627\u0645\u064b\u0627 \u0642\u0644\u064a\u0644\u0629 \u0627\u0644\u0644\u0647\u0645 \u0628\u0644\u063a\u0646\u0627 \u0623\u064a\u0627\u0645\u0647 \u0648\u0644\u064a\u0627\u0644\u064a\u0647 \u0648\u0623\u0646\u062a \u0631\u0627\u0636\u064d \u0639\u0646\u0627 \u0648\u0623\u0647\u0644\u0646\u0627 \u0648\u0643\u0644 \u0645\u0646 \u0646\u064f\u062d\u0628 \ud83c\udf19\u2665\ufe0f \u060c \u0634\u0627\u062a \u0628\u0646\u0648\u062a\u0629 \u0639\u0634\u0642\u064a \u064a\u0631\u062d\u0628 \u0628\u0643\u0645 \u060c \u0644\u0648\u062d\u0629 \u0627\u0644\u0634\u0631\u0641: \u0623\u0641\u0636\u0644 \u0639\u0636\u0648 (\u0642\u0631\u064a\u0628\u0627\u064b) \u060c \u0623\u0641\u0636\u0644 \u0639\u0636\u0648\u0629 (\u0642\u0631\u064a\u0628\u0627\u064b) \u060c \u0645\u0628\u062f\u0639 \u0627\u0644\u062d\u0627\u0626\u0637 (\u0642\u0631\u064a\u0628\u0627) \u060c \u0645\u0628\u062f\u0639\u0629 \u0627\u0644\u062d\u0627\u0626\u0637 (\u0642\u0631\u064a\u0628\u0627\u064e\u064e) \u060c \u0646\u062a\u0645\u0646\u0649 \u0644\u0643\u0645 \u0642\u0636\u0627\u0621 \u0623\u0633\u0639\u062f \u0627\u0644\u0623\u0648\u0642\u0627\u062a \u0628\u0635\u062d\u0628\u062a\u0646\u0627","required_likes_to_change_name_status":50,"disable_marquee":0,"default_rooms_flag":"bhq3pawh1ekbxz_w.jpeg","rooms_greeting_title":".. | \u062f\u0631\u062f\u0634\u0629 \u0628\u0646\u0648\u062a\u0629 \u0639\u0634\u0642\u064a \u062a\u0631\u062d\u0628 \u0628\u0643\u0645 | ..","default_avatar":"tfcnjzqylxn6bwm9.png","show_wall_banner":0,"wall_banner_msg":"\u0627\u0644\u0633\u0644\u0627\u0645 \u0639\u0644\u064a\u0643\u0645 \u0648 \u0631\u062d\u0645\u0629 \u0627\u0644\u0644\u0647 \u0648 \u0628\u0631\u0643\u0627\u062a\u0647","wall_banner_background_color":"#FAF0E6","wall_banner_font_color":"#A72A2A","self_messages_icon":"4t19_2xioxajpl3q.jpeg","self_message_bg_color":"#D7ECF7","self_message_title_color":"#A76B6B","self_message_content_color":"#0B0D0D","disable_floating_particles":1,"show_interface_background":0,"interface_background":null,"username_register_length":30,"username_guest_length":30,"required_likes_public":0,"time_between_messages":0,"public_msg_length":250,"youtube_url":null,"is_radio_stream_enabled":0,"radio_stream_url":"https:\/\/listen.radioking.com\/radio\/96766\/stream\/136030","radio_stream_on_img":null,"radio_stream_off_img":null,"tv_box_url":"https:\/\/www.youtube.com\/watch?v=eOsTqcpOniQ","tv_box_title":"\u062a\u0644\u0641\u0632\u064a\u0648\u0646 \u0627\u0644\u0634\u0627\u062a","tv_box_enabled":0,"is_mic_enabled":1,"mic_room":null,"wall_msg_count":35};
 </script>
 
-<script src="../cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="../cdnjs.cloudflare.com/ajax/libs/ClientJS/0.1.11/client.min.js"></script>
-<script crossorigin src="../unpkg.com/webrtc-adapter%406.4.8/out/adapter.js"></script>
-<script src="js/app3860.js?v=1"></script>
+<script src="https://chattty.com/cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://chattty.com/cdnjs.cloudflare.com/ajax/libs/ClientJS/0.1.11/client.min.js"></script>
+<script src="https://chattty.com/js/app3860.js?v=1"></script>
 
 <script src="../cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script>$( document ).ready(function() { $( document ).ready(function() { $( document ).ready(function() { $( document ).ready(function() { $( document ).ready(function() { $( document ).ready(function() { $( document ).ready(function() { $( document ).ready(function() { $( document ).ready(function() { setTimeout(function() {
